--- a/produktliste.html
+++ b/produktliste.html
@@ -28,9 +28,7 @@
                 <p class="cat">Topwear</p>
                 <p class="article">T-Shirt</p>
                 <p class="price">895</p>
-                <a href="produkt.html">
-                    <p class="link">Read More</p>
-                </a>
+                <a href="produkt.html" class="link">Read More</a>
 
             </div>
 
@@ -43,9 +41,8 @@
                 <div class="dis">
                     <p>55%</p>
                 </div>
-                <a href="produkt.html">
-                    <p class="link">Read More</p>
-                </a>
+                <a href="produkt.html" class="link">Read More</a>
+
             </div>
 
             <div class="card">
@@ -57,9 +54,8 @@
                 <div class="so">
                     <p>Sold Out</p>
                 </div>
-                <a href="produkt.html">
-                    <p class="link">Read More</p>
-                </a>
+                <a href="produkt.html" class="link">Read More</a>
+
             </div>
 
             <div class="card">
@@ -74,14 +70,19 @@
                 <div class="so">
                     <p>Sold Out</p>
                 </div>
-
-                <a href="produkt.html">
-                    <p class="link">Read More</p>
-                </a>
+                <a href="produkt.html" class="link">Read More</a>
             </div>
 
         </div>
     </main>
+
+    <footer>
+        <div class="set_3">
+            <p>Find More</p>
+            <p>logo</p>
+            <p>Made by Moi</p>
+        </div>
+    </footer>
 
 </body>
 
