--- a/index.html
+++ b/index.html
@@ -45,7 +45,13 @@
 
     </main>
 
-    <footer></footer>
+    <footer>
+        <div class="set_3">
+            <p>Find More</p>
+            <p>logo</p>
+            <p>Made by Moi</p>
+        </div>
+    </footer>
 </body>
 
 </html>
