--- a/produkt.html
+++ b/produkt.html
@@ -19,6 +19,16 @@
         <h1>Fashion R'Us</h1>
     </header>
 
+    <main></main>
+
+    <footer>
+        <div class="set_3">
+            <p>Find More</p>
+            <p>logo</p>
+            <p>Made by Moi</p>
+        </div>
+    </footer>
+
 </body>
 
 </html>
