done + footer more done

--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
 
     <footer>
         <div class="set_3">
-            <p>Find More</p>
+            <p>Find More here:
+                <br>
+                xx
+            </p>
             <p>logo</p>
             <p>Made by Moi</p>
         </div>
