--- a/produkt.html
+++ b/produkt.html
@@ -16,14 +16,47 @@
 
 <body>
     <header>
-        <h1>Fashion R'Us</h1>
+        <h1><a href="index.html">
+                Fashion R'Us
+            </a></h1>
     </header>
 
-    <main></main>
+    <main>
+        <div class="set_1">
+            <img src="img/1163.webp" alt="1163">
+
+            <div>
+                <p class="bold">MODEL NAME</p>
+                <p>Sahara Team India Fanwear Round Neck Jersey</p>
+
+                <p class="bold">COLOR</p>
+                <p>Blue</p>
+
+                <p class="bold">INVENTORY NUMBER</p>
+                <p>1163</p>
+
+                <p class="bold">BRANDS</p>
+                <p>Nike</p>
+            </div>
+
+            <div class="order">
+                <p>Sahara Team India Fanwear Round Neck Jersey</p>
+                <p class="cat">Topwear</p>
+                <p class="article">T-Shirt</p>
+
+                <p>Size</p>
+
+                <div class="add">Add to basket</div>
+            </div>
+        </div>
+    </main>
 
     <footer>
         <div class="set_3">
-            <p>Find More</p>
+            <p>Find More here:
+                <br>
+                xx
+            </p>
             <p>logo</p>
             <p>Made by Moi</p>
         </div>
