--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
 <body>
     <header>
-        <h1>Fashion R'Us</h1>
+        <h1><a href="index.html">
+                Fashion R'Us
+            </a></h1>
     </header>
 
     <main>
