--- a/produkt.html
+++ b/produkt.html
@@ -23,31 +23,7 @@
 
     <main>
         <div class="set_1">
-            <img src="img/1163.webp" alt="1163">
 
-            <div>
-                <p class="bold">MODEL NAME</p>
-                <p>Sahara Team India Fanwear Round Neck Jersey</p>
-
-                <p class="bold">COLOR</p>
-                <p>Blue</p>
-
-                <p class="bold">INVENTORY NUMBER</p>
-                <p>1163</p>
-
-                <p class="bold">BRANDS</p>
-                <p>Nike</p>
-            </div>
-
-            <div class="order">
-                <p>Sahara Team India Fanwear Round Neck Jersey</p>
-                <p class="cat">Topwear</p>
-                <p class="article">T-Shirt</p>
-
-                <p>Size</p>
-
-                <div class="add">Add to basket</div>
-            </div>
         </div>
     </main>
 
@@ -61,6 +37,7 @@
             <p>Made by Moi</p>
         </div>
     </footer>
+    <script src="single.js"></script>
 
 </body>
 
