categories-index_done

--- a/index.html
+++ b/index.html
@@ -24,24 +24,7 @@
     <main>
         <h2>Categories</h2>
         <div class="set_3x3">
-            <div class="clc"><a href="produktliste.html">
-                    <p>Accessories</p>
-                </a></div>
-            <div class="clc"><a href="produktliste.html">
-                    <p>Apparel</p>
-                </a></div>
-            <div class="clc"><a href="produktliste.html">
-                    <p>Footwear</p>
-                </a></div>
-            <div class="clc"><a href="produktliste.html">
-                    <p>Free Items</p>
-                </a></div>
-            <div class="clc"><a href="produktliste.html">
-                    <p>Personal Care</p>
-                </a></div>
-            <div class="clc"><a href="produktliste.html">
-                    <p>Sporting Goods</p>
-                </a></div>
+
         </div>
 
 
@@ -57,6 +40,8 @@
             <p>Made by Moi</p>
         </div>
     </footer>
+
+    <script src="categories.js"></script>
 
 
 </body>
