--- a/produktliste.html
+++ b/produktliste.html
@@ -24,6 +24,17 @@
     <main>
         <h2></h2>
 
+        <select id="filterSelect">
+            <option value="none">Filter</option>
+            <option value="discount">Discount</option>
+            <option value="soldout">Sold Out</option>
+            <option value="puma">Puma</option>
+            <option value="nike">Nike</option>
+            <option value="women">Women</option>
+            <option value="men">Men</option>
+        </select>
+
+
         <div class="set_container">
 
 
